--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ h4 {
 	font-family: "Raleway", sans-serif;
 	font-weight: 700;
 	line-height: 22px;
+	color: rgb(243, 88, 91);
 }
 
 h3 {
@@ -1341,12 +1342,12 @@ ul.timeline {
 
 .tabs-main {
 	padding-right: 15px;
-	margin-bottom: 30px;
+	margin-bottom: 20px;
 }
 
 .accordion-main {
 	padding-left: 15px;
-	margin-bottom: 30px;
+	margin-bottom: 20px;
 }
 
 .tabs .nav-tabs li a {
